--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
     <!-- banner -->
     <div class="BannerConteiner">
         <div class="BannerConteudo">
-            <h2>Adote hoje!</h2>
+            <div class="TextoBanner">
+                <h2>Adote hoje!</h2>
+                <p>Sabia que cerca de 30% dos animais de rua são abandonados por famílias que não podem mais cuidar deles? Adotar um animal é dar uma nova chance de vida!</p>
+            </div>
+            <img class="BannerDog" src="./Img/DogPeek.png">
         </div>
-        <div class="BannerConteudo">
+        <!-- <div class="BannerConteudo">
             <h2>Novos produtos disponíveis!</h2>
         </div>
         <div class="BannerConteudo">
             <h2>Visite nossa loja virtual!</h2>
-        </div>
+        </div> -->
     </div>
 
      <!-- categorias -->
