animação card prod arrumada

--- a/adocao.html
+++ b/adocao.html
@@ -25,6 +25,21 @@
     nome: "Killua",
     imagem: "./img/luna-coelho.jpg",
     descricao: "Coelhinha branca, ideal para casas com crianças."
+  },
+  {
+    nome: "Mauro",
+    imagem: "./Img/Papagaio.png",
+    descricao: "Cachorra dócil, 3 anos, castrada e vacinada."
+  },
+  {
+    nome: "Pilha",
+    imagem: "./img/thor-gato.jpg",
+    descricao: "Gatinho carinhoso, adora colo e é muito tranquilo."
+  },
+  {
+    nome: "Killua",
+    imagem: "./img/luna-coelho.jpg",
+    descricao: "Coelhinha branca, ideal para casas com crianças."
   }
 ];
   </script>
