--- a/produtos.html
+++ b/produtos.html
@@ -31,6 +31,46 @@
             categoria: "Gato",
             porte: "Pequeno"
             },
+            {
+            titulo: "Ração 1kg",
+            subtitulo: "Premium",
+            imagem: "./Img/RacaoDog.png",
+            precoAntigo: "R$ 180,00",
+            precoNovo: "R$ 150,00",
+            descricao: "Ração bla bla bla bla bla bla bla bla.",
+            categoria: "Cachorro",
+            porte: "Grande"
+            },
+            {
+            titulo: "Ração 2kg",
+            subtitulo: "Premium Plus",
+            imagem: "./Img/RacaoCat.png",
+            precoAntigo: "R$ 200,00",
+            precoNovo: "R$ 170,00",
+            descricao: "Ração para gatos adultos com sabor de frango.",
+            categoria: "Gato",
+            porte: "Pequeno"
+            },
+            {
+            titulo: "Ração 1kg",
+            subtitulo: "Premium",
+            imagem: "./Img/RacaoDog.png",
+            precoAntigo: "R$ 180,00",
+            precoNovo: "R$ 150,00",
+            descricao: "Ração bla bla bla bla bla bla bla bla.",
+            categoria: "Cachorro",
+            porte: "Grande"
+            },
+            {
+            titulo: "Ração 2kg",
+            subtitulo: "Premium Plus",
+            imagem: "./Img/RacaoCat.png",
+            precoAntigo: "R$ 200,00",
+            precoNovo: "R$ 170,00",
+            descricao: "Ração para gatos adultos com sabor de frango.",
+            categoria: "Gato",
+            porte: "Pequeno"
+            },
         ];
         </script>
 
