novas paginas + detalhes drop home

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <!-- botoes da home -->
     <div class="BotoesHome">
-        <button>Adestramento</button>
-        <button>Veterinário</button>
-        <button>Quiz</button>
-        <button>Produtos</button>
-        <button>Adotar</button>
+        <a href="/adestramento.html"><button>Adestramento</button></a>
+        <a href="/veterinarios.html"></a><button>Veterinário</button></a>
+        <a href="/quiz.html"></a><button>Quiz</button></a>
+        <a href="/produtos.html"></a><button>Produtos</button></a>
+        <a href="/adocao.html"></a><button>Adotar</button></a>
     </div>
 
     <!-- banner -->
