filtro na url tbm

--- a/produtos.html
+++ b/produtos.html
@@ -16,14 +16,14 @@
 
     <div id="filtros" style="margin-bottom: 20px; text-align: center;">
         <input type="text" id="filtro-nome" placeholder="Buscar por nome ou marca..." style="padding: 8px; width: 250px;">
-        <select id="filtro-categoria" style="padding: 8px;">
+        <select id="filtro-categoria">
             <option value="">Todas as categorias</option>
-            <option value="Cachorro">Cachorro</option>
-            <option value="Gato">Gato</option>
-            <option value="Peixe">Peixe</option>
-            <option value="Roedor">Roedor</option>
-            <option value="Pássaro">Pássaro</option>
-        </select>
+            <option value="cachorro">Cachorro</option>
+            <option value="gato">Gato</option>
+            <option value="peixe">Peixe</option>
+            <option value="roedor">Roedor</option>
+            <option value="passaro">Pássaro</option>
+          </select>                  
         </div>
       
 
