triangulo cor concertada

--- a/navbar.html
+++ b/navbar.html
@@ -8,7 +8,7 @@
 <body>
     <div class="navbar-container">
     <nav class="navbar">
-      <a class="nav-logo" href="/index.html"><img src="./Img/Logo.svg" alt="Logo do site"/></a>
+      <a class="nav-logo" href="/index.html"><img src="./Img/Logo.png" alt="Logo do site"/></a>
         <div class="nav-links">
         <a href="/index.html">Home</a>
         <a href="/sobrenos.html">Sobre</a>
