TRIANGULO SE MOVE

--- a/contato.html
+++ b/contato.html
@@ -13,16 +13,16 @@
 
   <!-- formulário e imagem -->
     <div class="container-contato">
-        <div class="formulario-contato">
+        <div class="imagem-contato">
+            <img src="./Img/telefoneDog.png">
+        </div>
+        <div class="formulario-contato centralizar">
             <h1 class="Titulo">Entre em contato conosco</h1>
             <input type="text" placeholder="Seu nome" required />
             <input type="email" placeholder="Seu e-mail" required />
             <input type="text" placeholder="Assunto" />
             <textarea rows="5" placeholder="Escreva sua mensagem aqui..." required></textarea>
             <button class="btn-cont" type="submit">Enviar mensagem</button>
-        </div>
-        <div class="imagem-contato">
-            <img src="./Img/contatoDog.png">
         </div>
     </div>
 
