--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <!-- botoes da home -->
     <div class="BotoesHome">
-        <a href="/adestramento.html"><button>Adestramento</button></a>
-        <a href="/veterinarios.html"></a><button>Veterinário</button></a>
-        <a href="/quiz.html"></a><button>Quiz</button></a>
-        <a href="/produtos.html"></a><button>Produtos</button></a>
-        <a href="/adocao.html"></a><button>Adotar</button></a>
+        <a href="/adestramento.html">Adestramento</a>
+        <a href="/veterinarios.html">Veterinário</a>
+        <a href="/quiz.html">Quiz</a>
+        <a href="/produtos.html">Produtos</a>
+        <a href="/adocao.html">Adotar</a>
     </div>
 
     <!-- banner -->
@@ -46,6 +46,7 @@
               <div class="bolinha" style="background-color: #F26B5E;" data-index="4"></div>
         </div>
         <div class="categ-dropdown" id="dropdown">
+            <div id="dropdown-triangulo"></div>
             <p id="dropdown-content">Texto da categoria</p>
         </div>
 
