todos os animasis na adoção

--- a/adocao.html
+++ b/adocao.html
@@ -10,42 +10,113 @@
 </head>
 <body>
   <script>
-    const animaisAdocao = [
+   const animaisAdocao = [
   {
-    nome: "Mauro",
-    imagem: "./Img/Papagaio.png",
-    descricao: "Cachorra dócil, 3 anos, castrada e vacinada."
-  },
-  {
-    nome: "Pilha",
-    imagem: "./img/thor-gato.jpg",
-    descricao: "Gatinho carinhoso, adora colo e é muito tranquilo."
-  },
-  {
-    nome: "Killua",
-    imagem: "./img/luna-coelho.jpg",
-    descricao: "Coelhinha branca, ideal para casas com crianças."
+    nome: "Bart",
+    imagem: "./Img/gatoFrajola.png",
+    descricao: "Gato brincalhão e curioso, adora se esconder em caixas e perseguir luzes."
   },
   {
     nome: "Mauro",
     imagem: "./Img/Papagaio.png",
-    descricao: "Cachorra dócil, 3 anos, castrada e vacinada."
+    descricao: "Papagaio extrovertido, adora interagir com humanos e imitar sons divertidos."
   },
   {
-    nome: "Pilha",
-    imagem: "./img/thor-gato.jpg",
-    descricao: "Gatinho carinhoso, adora colo e é muito tranquilo."
+    nome: "Zaya",
+    imagem: "./Img/pitbull.png",
+    descricao: "Pitbull leal e carinhoso, ótimo com crianças e muito protetor."
   },
   {
     nome: "Killua",
-    imagem: "./img/luna-coelho.jpg",
-    descricao: "Coelhinha branca, ideal para casas com crianças."
+    imagem: "./Img/gatoBranco.png",
+    descricao: "Gatinho tranquilo e observador, ideal para ambientes calmos."
+  },
+  {
+    nome: "Amanda",
+    imagem: "./Img/hamster.png",
+    descricao: "Hamster fofinha e ativa, adora correr na rodinha e explorar túneis."
+  },
+  {
+    nome: "Ravier",
+    imagem: "./Img/pincher.png",
+    descricao: "Pincher cheio de energia, sempre alerta e muito companheiro."
+  },
+  {
+    nome: "Denis",
+    imagem: "./Img/coelhoBranco.png",
+    descricao: "Coelhinho dócil e sociável, ama receber carinho e é super limpo."
+  },
+  {
+    nome: "Remi",
+    imagem: "./Img/gatoSiames.png",
+    descricao: "Gato siamês elegante e falante, adora conversar e estar perto das pessoas."
+  },
+  {
+    nome: "Thor",
+    imagem: "./Img/bulldog.png",
+    descricao: "Bulldog calmo e amigável, adora cochilar no sofá e passeios tranquilos."
+  },
+  {
+    nome: "Jessica",
+    imagem: "./Img/CobraMarrom.png",
+    descricao: "Cobra marrom serena, perfeita para quem já tem alguma experiência com répteis."
+  },
+  {
+    nome: "Garfield",
+    imagem: "./Img/gatoLaranja.png",
+    descricao: "Gato laranja preguiçoso e muito carismático, ama comida e bons cochilos."
+  },
+  {
+    nome: "Fernando",
+    imagem: "./Img/Dalmata.png",
+    descricao: "Dálmata super ativo, ama correr e brincar ao ar livre. Muito sociável!"
+  },
+  {
+    nome: "Pompom",
+    imagem: "./Img/coelhoMesclado.png",
+    descricao: "Coelhinho fofo e curioso, ótimo para lares com crianças e outros pets."
+  },
+  {
+    nome: "Chico",
+    imagem: "./Img/pug.png",
+    descricao: "Pug carismático e engraçado, sempre pronto pra uma soneca ou um petisco."
+  },
+  {
+    nome: "Pilha",
+    imagem: "./Img/calopsita.png",
+    descricao: "Calopsita simpática que ama cantar e interagir com o ambiente."
+  },
+  {
+    nome: "Caramelo",
+    imagem: "./Img/caramelo.png",
+    descricao: "Vira-lata carinhoso e companheiro, ama passear e brincar com bola."
+  },
+  {
+    nome: "Haru",
+    imagem: "./Img/coelhoCinza.png",
+    descricao: "Coelho cinza inteligente, aprende comandos e ama carinho atrás das orelhas."
+  },
+  {
+    nome: "Ronaldo",
+    imagem: "./Img/rolinhaPassaro.png",
+    descricao: "Rolinha mansa e delicada, gosta de voar em ambientes seguros e tranquilos."
+  },
+  {
+    nome: "Mia",
+    imagem: "./Img/saoBernardo.png",
+    descricao: "São Bernardo gigante e gentil, ótimo cão de companhia e muito protetor."
+  },
+  {
+    nome: "Natasha",
+    imagem: "./Img/CobraBranca.png",
+    descricao: "Cobra albina dócil e exótica, ideal para quem aprecia animais únicos."
   }
 ];
+
   </script>
     <div id="navbar"></div>
 
-    <h1 class="Titulo">Adoção de animais</h1>
+    <h1 class="Titulo adocaoTit">Adoção de animais</h1>
 
     <div id="adocao-container"></div> 
 
