--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,7 @@
 
     <div id="navbar"></div>
 
-    <h1 class="Titulo">Produtos</h1>
+    <h1 class="Titulo prodtitulo">Produtos</h1>
 
     <div id="filtros" style="margin-bottom: 20px; text-align: center;">
         <input type="text" id="filtro-nome" placeholder="Buscar por nome ou marca..." style="padding: 8px; width: 250px;">
