confetti + cards veterinarios

--- a/adocao.html
+++ b/adocao.html
@@ -33,9 +33,10 @@
 
     <div id="adocao-container"></div> 
 
-
+        <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+        <script src="./JS/confete.js"></script>
         <script src="./JS/navbar.js"></script>
-        <script src="./JS/cardAdocao.js"></script>
+        <script type="module" src="./JS/cardAdocao.js"></script>
         
 </body>
 </html>
