--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
         <div id="result-container" style="display: none;"></div>
     </div>
 
-  <script src="./JS/quiz.js"></script>
+  <script type="module" src="./JS/quiz.js"></script>
   <script src="./JS/navbar.js"></script>
 </body>
 </html>
