--- a/produtos.html
+++ b/produtos.html
@@ -13,9 +13,9 @@
 
     <h1 class="Titulo prodtitulo">Produtos</h1>
 
-    <div id="filtros" style="margin-bottom: 20px; text-align: center;">
-        <input type="text" id="filtro-nome" placeholder="Buscar por nome ou marca..." style="padding: 8px; width: 250px;">
-        <select id="filtro-categoria">
+    <div class="filtros" id="filtros">
+        <input  class="filtro-input" type="text" id="filtro-nome" placeholder="Buscar por nome ou marca...">
+        <select class="filtro-select" id="filtro-categoria">
             <option value="">Todas as categorias</option>
             <option value="cachorro">Cachorro</option>
             <option value="gato">Gato</option>
