--- a/veterinarios.html
+++ b/veterinarios.html
@@ -25,7 +25,7 @@
 
     <div class="card-vet">
         <h3 class="nome-vet" >Carla Silva</h3>
-        <img class="img-vet" src="img/vet1.png" class="vet-foto"/>
+        <img class="img-vet" src="img/vet2.jpg" class="vet-foto"/>
         <div class="card_menor">
             <img src="img/Silvestre.png" class="vet-especialidade"/>
         <p class="sobre-vet">Sobre mim: Especialista em animais silvestres! Vamos cuidar da natureza juntos 🌿</p>
@@ -34,7 +34,7 @@
 
     <div class="card-vet">
         <h3 class="nome-vet" >Lucas Lima</h3>
-        <img class="img-vet" src="img/vet1.png" class="vet-foto"/>
+        <img class="img-vet" src="img/vet3.jpg" class="vet-foto"/>
         <div class="card_menor">
             <img src="img/Reptil.png" class="vet-especialidade"/>
         <p class="sobre-vet">Sobre mim: Tenho experiência com pets exóticos e adoro desafios! 🦎</p>
