--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
         
                 <div class="BannerConteudo">
-                    <img class="BannerCat" src="./Img/catpeek.webp">
+                    <img class="BannerCat" src="./Img/catpeek.png">
                     <div class="TextoBanner">
                         <h2>Ajude a transformar vidas!</h2>
                         <p>Não pode adotar? Você ainda pode fazer a diferença sendo voluntário ou ajudando com doações. Juntos, salvamos mais vidas!</p>
@@ -47,7 +47,7 @@
                         <p>Milhares de animais são deixados nas ruas todos os dias. Denuncie maus-tratos e ajude a combater o abandono. Eles dependem de nós!</p>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
