--- a/veterinarios.html
+++ b/veterinarios.html
@@ -17,27 +17,95 @@
     <div class="card-vet">
         <h3 class="nome-vet" >Renata Gomez</h3>
         <img class="img-vet" src="img/vet1.png" class="vet-foto"/>
-        <div class="card_menor">
-            <img src="img/clinico.png" class="vet-especialidade"/>
-        <p class="sobre-vet">Sobre mim: Sou apaixonada por veterinária. Amo cuidar dos bichinhos! Me contrata 🐾</p>
+      <div class="card_menor">
+        <div class="vet-especialidade">
+          <img src="img/clinico.png"/>
+          <img src="img/Silvestre.png"/>
+          <img src="img/Reptil.png"/>
+        </div>
+      <p class="sobre-vet"><strong>Sobre mim:</strong> Sou apaixonada por veterinária. Amo cuidar dos bichinhos! Me contrata 🐾</p>
       </div>
     </div>
 
     <div class="card-vet">
-        <h3 class="nome-vet" >Carla Silva</h3>
-        <img class="img-vet" src="img/vet2.jpg" class="vet-foto"/>
+          <h3 class="nome-vet" >Carla Silva</h3>
+          <img class="img-vet" src="img/vet2.jpg" class="vet-foto"/>
         <div class="card_menor">
-            <img src="img/Silvestre.png" class="vet-especialidade"/>
-        <p class="sobre-vet">Sobre mim: Especialista em animais silvestres! Vamos cuidar da natureza juntos 🌿</p>
+          <div class="vet-especialidade">
+            <img src="img/Silvestre.png"/>
+        </div>
+      <p class="sobre-vet"><strong>Sobre mim:</strong> Especialista em animais silvestres! Vamos cuidar da natureza juntos 🌿</p>
       </div>
     </div>
 
     <div class="card-vet">
         <h3 class="nome-vet" >Lucas Lima</h3>
         <img class="img-vet" src="img/vet3.jpg" class="vet-foto"/>
-        <div class="card_menor">
-            <img src="img/Reptil.png" class="vet-especialidade"/>
-        <p class="sobre-vet">Sobre mim: Tenho experiência com pets exóticos e adoro desafios! 🦎</p>
+      <div class="card_menor">
+        <div class="vet-especialidade">
+          <img src="img/Silvestre.png"/>
+          <img src="img/Reptil.png"/>
+        </div>
+      <p class="sobre-vet"><strong>Sobre mim:</strong> Tenho experiência com pets exóticos e adoro desafios! 🦎</p>
+      </div>
+    </div>
+
+    <div class="card-vet">
+        <h3 class="nome-vet" >Laryssa Portugal</h3>
+        <img class="img-vet" src="img/vet1.png" class="vet-foto"/>
+      <div class="card_menor">
+        <div class="vet-especialidade">
+          <img src="img/clinico.png"/>
+          <img src="img/Silvestre.png"/>
+          <img src="img/Reptil.png"/>
+        </div>
+      <p class="sobre-vet"><strong>Sobre mim:</strong> Sou apaixonada por veterinária. Amo cuidar dos bichinhos! Me contrata 🐾</p>
+      </div>
+    </div>
+
+    <div class="card-vet">
+        <h3 class="nome-vet" >Felipe Zaguetti</h3>
+        <img class="img-vet" src="img/vet2.jpg" class="vet-foto"/>
+      <div class="card_menor">
+        <div class="vet-especialidade">
+          <img src="img/Silvestre.png"/>
+        </div>
+      <p class="sobre-vet"><strong>Sobre mim:</strong> Especialista em animais silvestres! Vamos cuidar da natureza juntos 🌿</p>
+      </div>
+    </div>
+
+    <div class="card-vet">
+        <h3 class="nome-vet" >Kauã Junior</h3>
+        <img class="img-vet" src="img/vet3.jpg" class="vet-foto"/>
+      <div class="card_menor">
+        <div class="vet-especialidade">
+          <img src="img/Silvestre.png"/>
+          <img src="img/Reptil.png"/>
+        </div>
+      <p class="sobre-vet"><strong>Sobre mim:</strong> Tenho experiência com pets exóticos e adoro desafios! 🦎</p>
+      </div>
+    </div>
+
+    <div class="card-vet">
+        <h3 class="nome-vet" >Samara Miller</h3>
+        <img class="img-vet" src="img/vet2.jpg" class="vet-foto"/>
+      <div class="card_menor">
+        <div class="vet-especialidade">
+          <img src="img/Silvestre.png"/>
+        </div>
+      <p class="sobre-vet"><strong>Sobre mim:</strong> Especialista em animais silvestres! Vamos cuidar da natureza juntos 🌿</p>
+      </div>
+    </div>
+
+    <div class="card-vet">
+        <h3 class="nome-vet" >Nathan Rosa</h3>
+        <img class="img-vet" src="img/vet3.jpg" class="vet-foto"/>
+      <div class="card_menor">
+        <div class="vet-especialidade">
+          <img src="img/Silvestre.png"/>
+          <img src="img/Reptil.png"/>
+        </div>
+      <p class="sobre-vet"><strong>Sobre mim:</strong> Tenho experiência com pets exóticos e adoro desafios! 🦎</p>
       </div>
     </div>
   </div>
