--- a/contato.html
+++ b/contato.html
@@ -45,6 +45,43 @@
         </div>
     </div>
 
+        <!-- Card Valores -->
+        <h2 class="Titulo tit-sb centralizar">Valores</h2>
+        <div class="valores-container">
+            <div class="valor-card" style="background-color: #71AB3E;">
+                <h3>Compromisso</h3>
+                <p>Resgatar e oferecer um futuro melhor para os animais.</p>
+            </div>
+            <div class="valor-card" style="background-color: #71AB3E;">
+                <h3>Empatia</h3>
+                <p>Tratar todos os animais com amor e respeito.</p>
+            </div>
+            <div class="valor-card" style="background-color: #71AB3E;">
+                <h3>Educação</h3>
+                <p>Promover a guarda responsável e os direitos dos animais.</p>
+            </div>
+            <div class="valor-card" style="background-color: #71AB3E;">
+                <h3>Transparência</h3>
+                <p>Prezamos pela honestidade em todas as nossas ações.</p>
+            </div>
+        </div>
+
+
+    <!-- Card Doação -->
+     <div class="centralizar">
+        <div class="card-doacao">
+            <div>
+                <img src="./Img/iconDoacao.png" width="150px">
+            </div>
+            <div>
+                <h2 class="Titulo tit-sb">Como Ajudar</h2>
+                <p>Existem muitas formas de fazer a diferença: adote um pet, torne-se voluntário ou contribua com doações. <br> Cada gesto transforma vidas!</p>
+                <a class="sobrenos-button">Faça uma Doação</a>
+                <a class="sobrenos-button">Seja um Voluntário</a>
+            </div>
+    </div>
+     </div>
+     
     <script src="./JS/navbar.js"></script>
 </body>
 </html>
