começando a estilização do quiz

--- a/quiz.html
+++ b/quiz.html
@@ -12,8 +12,8 @@
     <h1>🐾 Descubra qual o animal perfeito para você!</h1>
     <div id="quiz" class="question"></div>
     <div id="result" class="result" style="display:none;">
-    <img id="animal-img" src="" alt="Animal recomendado" style="max-width: 100%; border-radius: 12px; margin-bottom: 15px;">
-    <div id="result-text"></div>
+     <img id="animal-img" src="" alt="Animal recomendado" >
+     <div id="result-text"></div>
    </div>
 
   <script type="module" src="./JS/quiz.js"></script>
