--- a/contato.html
+++ b/contato.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contato - GetPet</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Contato - GetPet</title>
     <link rel="stylesheet" href="CSS/navbar.css" />
-    <link rel="stylesheet" href="CSS/index.css" />
     <link rel="stylesheet" href="./CSS/contato.css" />
 </head>
+
 <body>
     <div id="navbar"></div>
 
-  <!-- formulário e imagem -->
+    <!-- formulário e imagem -->
     <div class="container-contato">
         <div class="imagem-contato">
             <img src="./Img/telefoneDog.png">
@@ -26,13 +27,12 @@
         </div>
     </div>
 
-  <!-- Card com mapa e informações -->
+    <!-- Card com mapa e informações -->
     <div class="card-infos">
         <div class="mapa">
-            <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.470392888332!2d-46.64848168442442!3d-23.588003968391695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c21d9a70eb%3A0x12cb76384132e2ff!2sAv.%20Paulista%2C%201000%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1615467315193!5m2!1spt-BR!2sbr" 
-            allowfullscreen="" 
-            loading="lazy">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.470392888332!2d-46.64848168442442!3d-23.588003968391695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c21d9a70eb%3A0x12cb76384132e2ff!2sAv.%20Paulista%2C%201000%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1615467315193!5m2!1spt-BR!2sbr"
+                allowfullscreen="" loading="lazy">
             </iframe>
         </div>
         <div class="infos-escritorio">
@@ -45,43 +45,72 @@
         </div>
     </div>
 
-        <!-- Card Valores -->
-        <h2 class="Titulo tit-sb centralizar">Valores</h2>
-        <div class="valores-container">
-            <div class="valor-card" style="background-color: #71AB3E;">
-                <h3>Compromisso</h3>
-                <p>Resgatar e oferecer um futuro melhor para os animais.</p>
-            </div>
-            <div class="valor-card" style="background-color: #71AB3E;">
-                <h3>Empatia</h3>
-                <p>Tratar todos os animais com amor e respeito.</p>
-            </div>
-            <div class="valor-card" style="background-color: #71AB3E;">
-                <h3>Educação</h3>
-                <p>Promover a guarda responsável e os direitos dos animais.</p>
-            </div>
-            <div class="valor-card" style="background-color: #71AB3E;">
-                <h3>Transparência</h3>
-                <p>Prezamos pela honestidade em todas as nossas ações.</p>
-            </div>
+    <!-- Card Valores -->
+    <h2 class="Titulo tit-sb centralizar">Valores</h2>
+    <div class="valores-container">
+        <div class="valor-card" style="background-color: #71AB3E;">
+            <h3>Compromisso</h3>
+            <p>Resgatar e oferecer um futuro melhor para os animais.</p>
         </div>
+        <div class="valor-card" style="background-color: #71AB3E;">
+            <h3>Empatia</h3>
+            <p>Tratar todos os animais com amor e respeito.</p>
+        </div>
+        <div class="valor-card" style="background-color: #71AB3E;">
+            <h3>Educação</h3>
+            <p>Promover a guarda responsável e os direitos dos animais.</p>
+        </div>
+        <div class="valor-card" style="background-color: #71AB3E;">
+            <h3>Transparência</h3>
+            <p>Prezamos pela honestidade em todas as nossas ações.</p>
+        </div>
+    </div>
 
 
     <!-- Card Doação -->
-     <div class="centralizar">
+    <div class="centralizar">
         <div class="card-doacao">
             <div>
                 <img src="./Img/iconDoacao.png" width="150px">
             </div>
             <div>
                 <h2 class="Titulo tit-sb">Como Ajudar</h2>
-                <p>Existem muitas formas de fazer a diferença: adote um pet, torne-se voluntário ou contribua com doações. <br> Cada gesto transforma vidas!</p>
+                <p>Existem muitas formas de fazer a diferença: adote um pet, torne-se voluntário ou contribua com
+                    doações. <br> Cada gesto transforma vidas!</p>
                 <a class="sobrenos-button">Faça uma Doação</a>
                 <a class="sobrenos-button">Seja um Voluntário</a>
             </div>
+        </div>
     </div>
-     </div>
-     
+    <footer>
+        <div class="content">
+            <div class="principalContent">
+                <div class="links">
+                    <a href="">Sobre Nossa ONG</a>
+                    <a href="">Contato</a>
+                    <a href="">Termos de Uso</a>
+                    <a href="">Politica de Privacidade </a>
+                </div>
+                <div class="redes">
+                    <h3>Siga-nos nas redes sociais: </h3>
+                    <a href=""><img width="40px" src="Img/icons8-facebook-novo-50.png"></a>
+                    <a href=""><img width="40px" src="Img/icons8-instagram-50.png"></a>
+                    <a href=""><img width="40px" src="Img/icons8-whatsapp-50.png"> </a>
+                    <a href=""><img width="40px" src="Img/icons8-x-50.png"> </a>
+                </div>
+
+            </div>
+
+            <div class="subContent">
+                <p>Desenvolvido por Manoela Cruz Ramalho , Livia Figueiredo e Sabrina Britto de Abreu</p>
+                <h6>GetPet © 2025 | Todos os direitos reservados.</h6>
+            </div>
+            <div class="line"></div>
+        </div>
+
+    </footer>
     <script src="./JS/navbar.js"></script>
+
 </body>
+
 </html>
