--- a/produtos.html
+++ b/produtos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="CSS/produtos.css" />
     <title>Produtos</title>
 </head>
+
 <body>
 
     <div id="navbar"></div>
@@ -14,7 +16,7 @@
     <h1 class="Titulo prodtitulo">Produtos</h1>
 
     <div class="filtros" id="filtros">
-        <input  class="filtro-input" type="text" id="filtro-nome" placeholder="Buscar por nome ou marca...">
+        <input class="filtro-input" type="text" id="filtro-nome" placeholder="Buscar por nome ou marca...">
         <select class="filtro-select" id="filtro-categoria">
             <option value="">Todas as categorias</option>
             <option value="cachorro">Cachorro</option>
@@ -22,14 +24,41 @@
             <option value="peixe">Peixe</option>
             <option value="roedor">Roedor</option>
             <option value="passaro">Pássaro</option>
-          </select> 
-        </div>
-      
+        </select>
+    </div>
+
 
     <div id="lista-produtos" class="produtos-container"></div>
 
-        <script src="./JS/navbar.js"></script>
-        <script src="./JS/cardProdutos.js"></script>
-        
+    <script src="./JS/navbar.js"></script>
+    <script src="./JS/cardProdutos.js"></script>
+    <footer>
+        <div class="content">
+            <div class="principalContent">
+                <div class="links">
+                    <a href="">Sobre Nós</a>
+                    <a href="">Contato</a>
+                    <a href="">Termos de Uso</a>
+                    <a href="">Politica de Privacidade </a>
+                </div>
+                <div class="redes">
+                    <h3>Siga-nos nas redes sociais: </h3>
+                    <a href=""><img width="40px" src="Img/icons8-facebook-novo-50.png"></a>
+                    <a href=""><img width="40px" src="Img/icons8-instagram-50.png"></a>
+                    <a href=""><img width="40px" src="Img/icons8-whatsapp-50.png"> </a>
+                    <a href=""><img width="40px" src="Img/icons8-x-50.png"> </a>
+                </div>
+
+            </div>
+
+            <div class="subContent">
+                <p>Desenvolvido por Manoela Cruz Ramalho , Livia Figueiredo e Sabrina Britto de Abreu</p>
+                <h6>GetPet © 2025 | Todos os direitos reservados.</h6>
+            </div>
+            <div class="line"></div>
+        </div>
+
+    </footer>
 </body>
+
 </html>
