--- a/quiz.html
+++ b/quiz.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +8,39 @@
   <link rel="stylesheet" href="CSS/quiz.css">
   <title>Quiz</title>
 </head>
+
 <body>
   <div id="navbar"></div>
-    <h1>🐾 Descubra qual o animal perfeito para você!</h1>
-    <div id="quiz" class="question"></div>
-    <div id="result" class="result" style="display:none;">
-     <img id="animal-img" src="" alt="Animal recomendado" >
-     <div id="result-text"></div>
-   </div>
-  
+  <h1>🐾 Descubra qual o animal perfeito para você!</h1>
+  <div id="quiz" class="question"></div>
+  <div id="result" class="result" style="display:none;">
+    <img id="animal-img" src="" alt="Animal recomendado">
+    <div id="result-text"></div>
+  </div>
+  <footer>
+    <div class="links">
+      <a href="">Sobre Nós</a>
+      <a href="">Contato</a>
+      <a href="">Termos de Uso</a>
+      <a href="">Politica de Privacidade </a>
+    </div>
+    <div class="redes">
+      <h3>Siga-nos nas redes sociais: </h3>
+      <a href=""><img width="40px" src="Img/icons8-facebook-novo-50.png"></a>
+      <a href=""><img width="40px" src="Img/icons8-instagram-50.png"></a>
+      <a href=""><img width="40px" src="Img/icons8-whatsapp-50.png"> </a>
+      <a href=""><img width="40px" src="Img/icons8-x-50.png"> </a>
+    </div>
+    <div class="line"></div>
+
+    <div class="subContent">
+      <p>Desenvolvido por Manoela Cruz Ramalho , Livia Figueiredo e Sabrina Britto de Abreu</p>
+      <h6>GetPet © 2025 | Todos os direitos reservados.</h6>
+    </div>
+
+  </footer>
   <script type="module" src="./JS/quiz.js"></script>
   <script src="./JS/navbar.js"></script>
 </body>
+
 </html>
-
-
-
