--- a/quiz.html
+++ b/quiz.html
@@ -12,35 +12,38 @@
 <body>
   <div id="navbar"></div>
   <h1>🐾 Descubra qual o animal perfeito para você!</h1>
-  <div id="quiz" class="question"></div>
+  <div class="d-flex">
+    <div id="quiz" class="question"></div>
+  </div>
+
   <div id="result" class="result" style="display:none;">
     <img id="animal-img" src="" alt="Animal recomendado">
     <div id="result-text"></div>
   </div>
-  <footer>
-    <div class="links">
-      <a href="">Sobre Nós</a>
-      <a href="">Contato</a>
-      <a href="">Termos de Uso</a>
-      <a href="">Politica de Privacidade </a>
-    </div>
-    <div class="redes">
-      <h3>Siga-nos nas redes sociais: </h3>
-      <a href=""><img width="40px" src="Img/icons8-facebook-novo-50.png"></a>
-      <a href=""><img width="40px" src="Img/icons8-instagram-50.png"></a>
-      <a href=""><img width="40px" src="Img/icons8-whatsapp-50.png"> </a>
-      <a href=""><img width="40px" src="Img/icons8-x-50.png"> </a>
-    </div>
-    <div class="line"></div>
-
-    <div class="subContent">
-      <p>Desenvolvido por Manoela Cruz Ramalho , Livia Figueiredo e Sabrina Britto de Abreu</p>
-      <h6>GetPet © 2025 | Todos os direitos reservados.</h6>
-    </div>
-
-  </footer>
   <script type="module" src="./JS/quiz.js"></script>
   <script src="./JS/navbar.js"></script>
 </body>
+<footer>
+  <div class="links">
+    <a href="">Sobre Nós</a>
+    <a href="">Contato</a>
+    <a href="">Termos de Uso</a>
+    <a href="">Politica de Privacidade </a>
+  </div>
+  <div class="redes">
+    <h3>Siga-nos nas redes sociais: </h3>
+    <a href=""><img width="40px" src="Img/icons8-facebook-novo-50.png"></a>
+    <a href=""><img width="40px" src="Img/icons8-instagram-50.png"></a>
+    <a href=""><img width="40px" src="Img/icons8-whatsapp-50.png"> </a>
+    <a href=""><img width="40px" src="Img/icons8-x-50.png"> </a>
+  </div>
+  <div class="line"></div>
+
+  <div class="subContent">
+    <p>Desenvolvido por Manoela Cruz Ramalho , Livia Figueiredo e Sabrina Britto de Abreu</p>
+    <h6>GetPet © 2025 | Todos os direitos reservados.</h6>
+  </div>
+
+</footer>
 
 </html>
